--- a/css/global.css
+++ b/css/global.css
@@ -5,7 +5,7 @@
     --facebook: hsl(208, 92%, 53%);
     --twitter: hsl(203, 89%, 53%);
     --instagram-start: hsl(37, 97%, 70%);
-    --isntagram-end: hsl(329, 70%, 58%);
+    --instagram-end: hsl(329, 70%, 58%);
     --youtube: hsl(348, 97%, 39%);
 
     /* dark toggle colors */
